# hrl-othello

Othello-cpp/: CMakeLists.txt  Makefile  ai.cpp  ai.h  bindings.cpp  constants.h  engine.cpp  engine.h  interface.cpp  interface.h  io.cpp  io.h  main.cpp  objects.cpp  objects.h  tests.cpp  tests.h
Othello-python/: Agents.py  DQN.py  DQNTrain.py  EnvironmentTests.py  Environments.py  HIRO.py  HIROTrain.py  HeatMapGeneration.py  MemoryTests.py  Models.py  NetworkVisualization.py  RLTests.py  ReplayBuffer.py  ResultsTableProduction.py  Tournament.py  TournamentTests.py  bindings_tests.py  constants.py  information_gain.py  main.py  mcts_check.py  misc_functions.py  othello_wrapper.py  othello_wrapper_tests.py  sampleEfficiency.py  sampleEfficiencyGeneration.py  test.py  transferability.py  transferability_evaluation.py  transferability_experiment_helper.py  transferability_train.py
